--- a/scripts/tests/requests/bad-request-duplicates-within-policy.yaml
+++ b/scripts/tests/requests/bad-request-duplicates-within-policy.yaml
@@ -1,18 +1,18 @@
 security_group:
   request_id: RQ-001
   business_justification: >
-    Create security-group for datadog API us-east-1 privatelink in us-east-1
+    Create security-group for bad-request-duplicates-within
   accountId: 6666666
   region: us-east-1
   vpc_id: vpc-0141944e897367945
   serviceType: privatelink-consumer
   serviceName: com.amazonaws.vpce.us-east-1.vpce-svc-064ea718f8d0ead77
-  thirdpartyName: jira-cloud
-  thirdPartyID: TP-0003
+  thirdpartyName: bad-request-duplicates-within
+  thirdPartyID: 123456
 rules:
   - request_id: RQ-001
     business_justification: >
-        Create access from acct-1 intranet nat gateway to datadog api vpc-endpoint. 
+        bad-request-duplicates-within rule 1
     source:
       account_id: 111122223333
       vpc_id: vpc-aaa
@@ -26,9 +26,9 @@ rules:
     appid: ssl
     url: https://api.datadoghq.com
     enable_palo_inspection: true
-  - request_id: RQ-001
+  - request_id: RQ-002
     business_justification: >
-        Create access from acct-1 intranet nat gateway to datadog api vpc-endpoint. 
+        bad-request-duplicates-within rule 2 
     source:
       account_id: 111122223333
       vpc_id: vpc-aaa
@@ -38,7 +38,7 @@ rules:
         - 10.12.1.1/32
         - 10.13.1.1/32
     protocol: tcp
-    port: 69
+    port: 443
     appid: ssl
     url: https://api.datadoghq.com
     enable_palo_inspection: true
