update the datadog name to fix collision and fix url cleanup required

--- a/infrastructure/policies/datadog-us-east-1.vpce-svc-064ea718f8d0ead77-us-east-1-policy.json
+++ b/infrastructure/policies/datadog-us-east-1.vpce-svc-064ea718f8d0ead77-us-east-1-policy.json
@@ -4,7 +4,7 @@
   "region": "us-east-1",
   "tags": {
     "RequestID": "RQ-001",
-    "Thirdparty": "datadog",
+    "Thirdparty": "datadog_v2",
     "ThirdpartyID": "123456",
     "ServiceType": "privatelink-consumer"
   },
