--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,7 +2,8 @@ name: terraform plan workflow
 
 on:
   push:
-  workflow_dispatch:
+    branches-ignore:
+    - main
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
