--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,7 +1,8 @@
 name: terraform destroy workflow
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '0 4 30 7 *'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -46,7 +47,7 @@ jobs:
           echo "Runner public IP: $IP"
           aws ec2 authorize-security-group-ingress \
             --region us-east-1 \
-            --group-id "sg-055318658e69a8961" \
+            --group-id "sg-06b7110d52c780380" \
             --protocol tcp \
             --port "22-443" \
             --cidr "${IP}/32" > /dev/null
