--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -234,7 +234,7 @@ jobs:
           echo "📊 Running AI rule reviewer..."
           python3 drewpy-ai-actions/aws-netsec-automation-review/ai-rule-review.py \
             --input-file /tmp/issue.yaml \
-            --output-file /tmp/ai_review_output.md
+            --output-file /tmp/ai_review_output.md || true
 
           echo "📝 Posting AI review result..."
           ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
