--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -220,6 +220,26 @@ jobs:
             echo "✅ Third-party validation passed."
           fi
 
+      - name: Duplicate Validation
+        uses: drewpypro/drewpy-actions/yaml-duplicate-validator@v1.0.3
+        id: duplicate_validation
+        with:
+          created_yaml: /tmp/issue.yaml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repo: ${{ github.repository }}
+        continue-on-error: true
+
+      - name: Comment on issue if dupes are found
+        if: ${{ steps.duplicate_validation.outputs.duplicates_detected == 'true' }}
+        run: |
+          echo "📎 **Fix Before Resubmitting**:" > comment.txt
+          echo "" >> comment.txt
+          echo "${{ steps.duplicate_validation.outputs.pretty_message }}" >> comment.txt
+
+          gh issue comment ${{ github.event.issue.number }} --body-file comment.txt
+          gh issue edit ${{ github.event.issue.number }} --add-label "fix-yaml"
+          exit 1
+
       - name: AI Review
         env:
           DREWPYAI_API_KEY: ${{ secrets.DREWPYAI_API_KEY }}
@@ -239,25 +259,6 @@ jobs:
           echo "📝 Posting AI review result..."
           ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
           gh issue comment "$ISSUE_NUMBER" --body-file /tmp/ai_review_output.md
-          
-      - name: Duplicate Validation
-        uses: drewpypro/drewpy-actions/yaml-duplicate-validator@v1.0.3
-        id: duplicate_validation
-        with:
-          created_yaml: /tmp/issue.yaml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repo: ${{ github.repository }}
-
-      - name: Comment on issue if dupes are found
-        if: ${{ steps.duplicate_validation.outputs.duplicates_detected == 'true' }}
-        run: |
-          echo "📎 **Fix Before Resubmitting**:" > comment.txt
-          echo "" >> comment.txt
-          echo "${{ steps.duplicate_validation.outputs.pretty_message }}" >> comment.txt
-
-          gh issue comment ${{ github.event.issue.number }} --body-file comment.txt
-          gh issue edit ${{ github.event.issue.number }} --add-label "fix-yaml"
-          exit 1
 
       # Commit Changes and Create PR (Always Runs)
       - name: Commit Changes and Create PR
