--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -230,6 +230,8 @@ jobs:
         continue-on-error: true
 
       - name: Comment on issue if dupes are found
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         if: ${{ steps.duplicate_validation.outputs.duplicates_detected == 'true' }}
         run: |
           echo "📎 **Fix Before Resubmitting**:" > comment.txt
