--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -234,21 +234,18 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          set -x  # Enable shell debugging (every command will be printed)
-          echo "DEBUG: Start writing comment.txt"
+          set -x
           {
             echo "**Fix Before Resubmitting:**"
             echo ""
-            echo "${{ steps.duplicate_validation.outputs.pretty_message }}"
+            # Write the pretty_message as-is, preserving all line breaks and special chars
+            printf "%s\n" "${{ steps.duplicate_validation.outputs.pretty_message }}"
           } > comment.txt
 
           echo "DEBUG: comment.txt content:"
           cat comment.txt
 
-          echo "DEBUG: Running gh issue comment"
           gh issue comment ${{ github.event.issue.number }} --body-file comment.txt
-
-          echo "DEBUG: Running gh issue edit"
           gh issue edit ${{ github.event.issue.number }} --add-label "fix-yaml" || echo "label already exists"
           exit 1
 
