--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -234,18 +234,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          set -x
-          echo "**Fix Before Resubmitting:**" > comment.txt
-          echo "" >> comment.txt
-          # Safely append pretty_message to the file
-          printf "%s\n" "${{ steps.duplicate_validation.outputs.pretty_message }}" >> comment.txt
-
-          echo "DEBUG: comment.txt content:"
-          cat comment.txt
-
-          gh issue comment ${{ github.event.issue.number }} --body-file comment.txt
-          gh issue edit ${{ github.event.issue.number }} --add-label "fix-yaml" || echo "label already exists"
-          exit 1
+          cat /tmp/dupe_output.txt
+          gh issue comment ${{ github.event.issue.number }} --body-file /tmp/dupe_output.txt
 
       - name: AI Review
         env:
