--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -25,14 +25,40 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Process Issue YAML
+      - name: Parse and validate request yaml
         id: issue_yaml
         run: |
+          # 1. Split Yaml if multi-line separator exists
           jq -r '.issue.body' "$GITHUB_EVENT_PATH" | sed '/^```yaml/,/^```/d' > /tmp/issue.yaml
           csplit -z /tmp/issue.yaml '/---/' '{*}'
           FILES=$(ls xx* | tr '\n' ' ')
           echo "split_files=$FILES" >> $GITHUB_OUTPUT
 
+          # 2. Generate policy mappings if existing policy exists
+          MAPPING=""
+          for FILE in $FILES; do
+            SERVICE_TYPE=$(yq '.security_group.serviceType' "$FILE")
+            REGION=$(yq '.security_group.region' "$FILE" | tr '[:upper:]' '[:lower:]')
+            if [ "$SERVICE_TYPE" = "privatelink-consumer" ]; then
+              THIRD_NAME=$(yq '.security_group.thirdpartyName' "$FILE" | tr '[:upper:]' '[:lower:]')
+              THIRD_ID=$(yq '.security_group.thirdPartyID' "$FILE")
+              SERVICE=$(yq '.security_group.serviceName' "$FILE" | sed 's/com\.amazonaws\.vpce\.//' | tr '[:upper:]' '[:lower:]' | tr -cd '[:alnum:]-')
+              FILENAME="${THIRD_NAME}-${THIRD_ID}-${SERVICE}-${REGION}-policy.yaml"
+            else
+              APPID=$(yq '.security_group.internalAppID' "$FILE" | tr '[:upper:]' '[:lower:]')
+              SERVICENAME=$(yq '.security_group.serviceName' "$FILE" | tr '[:upper:]' '[:lower:]')
+              FILENAME="${APPID}-${SERVICENAME}-${REGION}-policy.yaml"
+            fi
+
+            POLICY_PATH="infrastructure/policies/$FILENAME"   # <--- ADD THIS LINE!
+
+            MAPPING="${MAPPING}${FILE},${POLICY_PATH}|"
+            echo "[$FILE] → [$FILENAME] → exists? $( [ -f "$POLICY_PATH" ] && echo yes || echo no )"
+          done
+
+          MAPPING="${MAPPING%|}"
+          echo "request_existing_mapping=$MAPPING" >> $GITHUB_OUTPUT
+          
       - name: Set Issue YAML Outputs
         id: yaml_outputs
         if: "contains(github.event.issue.labels.*.name, 'skip-form-processing')"
@@ -97,13 +123,11 @@ jobs:
           fi
 
       - name: Duplicate Validation
-        uses: drewpypro/drewpy-actions/yaml-duplicate-validator@v1.0.5
+        uses: drewpypro/drewpy-actions/yaml-duplicate-validator@v1.0.6
         id: duplicate_validation
         with:
           created_yaml: ${{ steps.issue_yaml.outputs.split_files }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repo: ${{ github.repository }}
-        continue-on-error: true
+          request_existing_mapping: ${{ steps.issue_yaml.outputs.request_existing_mapping }}
 
       - name: Comment on issue if dupes are found
         if: ${{ steps.duplicate_validation.outputs.duplicates_detected == 'true' }}
@@ -158,13 +182,12 @@ jobs:
           git checkout -b "$BRANCH"
 
           # Copy validated files to infra/policies and add
-          # Read mapping from validator output file
-          IFS=' ' read -r -a files <<< "${{ steps.duplicate_validation.outputs.validated_policy_filenames }}"
-          for file in "${files[@]}"; do
-            # Find corresponding xx* input file from validated_filenames.txt
-            src=$(grep " $file" validated_filenames.txt | awk '{print $1}')
-            cp "$src" "infrastructure/policies/$file"
-            git add "infrastructure/policies/$file"
+          MAPPING="${{ steps.issue_yaml.outputs.request_existing_mapping }}"
+          IFS='|' read -ra mappings <<< "$MAPPING"
+          for map in "${mappings[@]}"; do
+            IFS=',' read -r src dest <<< "$map"
+            cp "$src" "$dest"
+            git add "$dest"
           done
 
           # Commit only if there are changes
