push on any commits matching those branches for now

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,10 +1,10 @@
 name: terraform plan workflow
 
 on:
-  pull_request:
+  push:
     branches:
       - 'issue*'
-      - 'Dev*'
+      - 'dev*'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
