--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,10 +2,9 @@ name: terraform plan workflow
 
 on:
   push:
-    branches:
-      - 'issue-*'
-      - 'dev*'
-
+    paths:
+      - 'infrastructure/**'
+      
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
