--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,10 +1,12 @@
 name: terraform plan workflow
 
 on:
-  push:
+  pull_request:
     paths:
       - 'infrastructure/**'
-      
+    branches:
+      - main
+
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
