--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -192,7 +192,7 @@ jobs:
           for map in "${mappings[@]}"; do
             IFS=',' read -r src dest <<< "$map"
             if [ -f "$dest" ]; then
-              yq -i '.rules += (load("'"$src"'").rules)' "$dest"
+              yq -i '.rules += (load("'"$src"'").rules // [])' "$dest"
             else
               cp "$src" "$dest"
             fi
