--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -107,24 +107,38 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          set -x
           pip install --quiet yamllint
+
+          
+          echo "DEBUG: Printing first few lines of /tmp/issue.yaml"
+          head -20 /tmp/issue.yaml || true
+          echo "DEBUG: Checking schema directory"
+          ls -lh .github/schema || true
 
           # Get serviceType and set schema
           SERVICE_TYPE=$(yq '.security_group.serviceType' /tmp/issue.yaml | tr -d '"')
+          echo "DEBUG: Detected serviceType: '$SERVICE_TYPE'"
+
           if [ "$SERVICE_TYPE" = "privatelink-consumer" ] || [ "$SERVICE_TYPE" = "privatelink-provider" ]; then
             SCHEMA_PATH=".github/schema/${SERVICE_TYPE}-schema.json"
           else
             echo "❌ Error: serviceType is missing or invalid: '$SERVICE_TYPE'"
             exit 1
           fi
+          echo "DEBUG: Using schema path: $SCHEMA_PATH"
 
           # -------- Yamllint --------
           yamllint --format standard -c .yamllint /tmp/issue.yaml > /tmp/yamllint_output.txt 2>&1
           YAMLLINT_OK=$?
+          echo "DEBUG: yamllint exit code: $YAMLLINT_OK"
+          cat /tmp/yamllint_output.txt || true
 
           # -------- Schema Validation --------
           python3 ./scripts/validate_schema.py /tmp/issue.yaml "$SCHEMA_PATH" > /tmp/schema_output.txt 2>&1
           SCHEMA_OK=$?
+          echo "DEBUG: schema validation exit code: $SCHEMA_OK"
+          cat /tmp/schema_output.txt || true
 
           # -------- Compose Comment if needed --------
           if [ $YAMLLINT_OK -ne 0 ] || [ $SCHEMA_OK -ne 0 ]; then
@@ -151,7 +165,9 @@ jobs:
               fi
             } > /tmp/validation_comment.txt
 
-            gh issue comment "${{ github.event.issue.number }}" --body-file /tmp/validation_comment.txt
+            ISSUE_NUMBER=${{ github.event.issue.number }}
+            echo "DEBUG: Commenting on issue $ISSUE_NUMBER"
+            gh issue comment "$ISSUE_NUMBER" --body-file /tmp/validation_comment.txt
 
             echo "Validation errors found. Exiting workflow."
             exit 1
