--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -132,13 +132,13 @@ jobs:
           yamllint --format standard -c .yamllint /tmp/issue.yaml > /tmp/yamllint_output.txt 2>&1
           YAMLLINT_OK=$?
           echo "DEBUG: yamllint exit code: $YAMLLINT_OK"
-          cat /tmp/yamllint_output.txt || true
+          cat /tmp/yamllint_output.txt
 
           # -------- Schema Validation --------
           python3 ./scripts/validate_schema.py /tmp/issue.yaml "$SCHEMA_PATH" > /tmp/schema_output.txt 2>&1
           SCHEMA_OK=$?
           echo "DEBUG: schema validation exit code: $SCHEMA_OK"
-          cat /tmp/schema_output.txt || true
+          cat /tmp/schema_output.txt
 
           # -------- Compose Comment if needed --------
           if [ $YAMLLINT_OK -ne 0 ] || [ $SCHEMA_OK -ne 0 ]; then
