disabled output for debug

--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -107,7 +107,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          set -xe
+          set -x
+          set +e
           pip install --quiet yamllint
 
           echo "DEBUG: Printing first few lines of /tmp/issue.yaml"
