--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -109,7 +109,8 @@ jobs:
         run: |
           set -x
           set +e
-          pip install --quiet yamllint
+          
+          pip install --quiet yamllint jsonschema PyYaml
 
           echo "DEBUG: Printing first few lines of /tmp/issue.yaml"
           head -20 /tmp/issue.yaml || true
